--- a/libs/components/package.json
+++ b/libs/components/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@versioning/components",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.2",
   "type": "module",
   "main": "./src",
   "module": "./src",
@@ -19,18 +19,18 @@
   },
   "devDependencies": {
     "@types/node": "^20.8.7",
-    "@types/react-dom": "^18.2.7",
     "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "eslint": "^8.45.0",
-    "react-dom": "^18.2.0",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.0.2",
-    "vite-plugin-dts": "^3.6.0",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-dts": "^3.6.0"
   }
 }
