--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@versioning/core",
   "private": true,
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "semantic-release": "semantic-release"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.8.0",
@@ -10,11 +11,20 @@
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^8.0.3",
-    "lerna": "^7.0.2"
+    "lerna": "^7.0.2",
+    "semantic-release": "^22.0.5"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "version": "0.0.0-development",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alvarogfn/versioning.git"
+  },
+  "publishConfig": {
+    "access": "restricted"
   }
 }
