--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,14 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "version": "independent",
-  "npmClient": "pnpm"
+  "npmClient": "pnpm",
+  "command": {
+    "version": {
+      "allowBranch": "main",
+      "amend": true,
+      "message": "",
+      "conventionalCommits": true,
+      "yes": true
+    }
+  }
 }
